# coral_cam

./: .gitignore  CMakeLists.txt  README.md  package.xml
clouds/: approx_decimation.pcd  pcd_file_160524_175309.pcd  pcd_file_160524_175538_1.pcd  pcd_file_160524_175538_2.pcd  pcd_file_160524_175538_3.pcd  pcd_file_160524_175538_4.pcd  pcd_file_160524_175538_5.pcd  pcd_file_160524_175538_6.pcd  pcd_file_160524_175538_7.pcd  pcd_file_160524_175538_8.pcd  pcd_file_160524_175538_9.pcd  pcd_file_160524_175610_10.pcd  pcd_file_160524_175610_11.pcd  pcd_file_160524_175610_12.pcd  pcd_file_160524_175610_13.pcd  pcd_file_160524_175610_14.pcd  pcd_file_160524_175610_15.pcd  pcd_file_160524_175610_16.pcd  pcd_file_160524_175610_17.pcd  pcd_file_160524_175611_18.pcd  pcd_file_160524_175611_19.pcd  pcd_file_160524_175642_20.pcd  pcd_file_160524_175642_21.pcd  pcd_file_160524_175642_22.pcd  pcd_file_160524_175642_23.pcd  pcd_file_160524_175642_24.pcd  pcd_file_160524_175643_25.pcd  pcd_file_160524_175643_26.pcd  pcd_file_160524_175643_27.pcd  pcd_file_160524_175643_28.pcd  pcd_file_160524_175643_29.pcd  pcd_file_160524_180442.pcd  pcd_file_160524_180622_1.pcd  pcd_file_160524_180622_2.pcd  pcd_file_160524_180622_3.pcd  pcd_file_160524_180622_4.pcd  pcd_file_160524_180622_5.pcd  pcd_file_160524_180622_6.pcd  pcd_file_160524_180622_7.pcd  pcd_file_160524_180622_8.pcd  (+354 more)
clouds/coral_20_approx/: pcd_file_170524_151712.pcd  pcd_file_170524_151712_1.pcd  pcd_file_170524_151712_2.pcd  pcd_file_170524_151712_4.pcd  pcd_file_170524_151712_5.pcd  pcd_file_170524_151713_1.pcd
clouds/coral_20_ros/: pcd_file_170524_151924.pcd  pcd_file_170524_151925_2.pcd  pcd_file_170524_151925_3.pcd  pcd_file_170524_151925_4.pcd  pcd_file_170524_151925_8.pcd  pcd_file_180524_150021.pcd  pcd_file_180524_150021_1.pcd  pcd_file_180524_150021_4.pcd  pcd_file_180524_150021_5.pcd  pcd_file_180524_150021_6.pcd  pcd_file_180524_150021_7.pcd  pcd_file_180524_150022_1.pcd
clouds/coral_20_water/: pcd_file_170524_151224.pcd  pcd_file_170524_151224_4.pcd  pcd_file_170524_151224_5.pcd
clouds/coral_30_approx/: pcd_file_170524_151731_1.pcd  pcd_file_170524_151731_2.pcd  pcd_file_170524_151731_3.pcd  pcd_file_170524_151731_4.pcd  pcd_file_170524_151732_1.pcd
clouds/coral_30_ros/: pcd_file_170524_151937.pcd  pcd_file_170524_151937_5.pcd  pcd_file_170524_151938.pcd  pcd_file_170524_151938_1.pcd  pcd_file_170524_151938_2.pcd  pcd_file_180524_150046_1.pcd  pcd_file_180524_150047_2.pcd  pcd_file_180524_150047_4.pcd  pcd_file_180524_150047_6.pcd  pcd_file_180524_150047_7.pcd
clouds/coral_30_water/: pcd_file_170524_151534_3.pcd  pcd_file_170524_151534_4.pcd  pcd_file_170524_151534_6.pcd  pcd_file_170524_151534_7.pcd  pcd_file_170524_151534_8.pcd
clouds/coral_40_approx/: pcd_file_170524_151747.pcd  pcd_file_170524_151747_3.pcd  pcd_file_170524_151747_5.pcd  pcd_file_170524_151747_6.pcd  pcd_file_170524_151747_9.pcd
clouds/coral_40_ros/: pcd_file_170524_151951.pcd  pcd_file_170524_151951_1.pcd  pcd_file_170524_151951_2.pcd  pcd_file_170524_151952_5.pcd  pcd_file_180524_150116_2.pcd  pcd_file_180524_150116_3.pcd  pcd_file_180524_150116_6.pcd  pcd_file_180524_150117.pcd  pcd_file_180524_150117_1.pcd
clouds/coral_40_water/: pcd_file_170524_151612_5.pcd  pcd_file_170524_151613.pcd
clouds/depth_20_approx /: pcd_file_170524_152516_1.pcd  pcd_file_170524_152516_2.pcd
clouds/depth_20_ros /: pcd_file_170524_152752.pcd  pcd_file_170524_152752_1.pcd  pcd_file_170524_152752_2.pcd  pcd_file_170524_152752_3.pcd  pcd_file_170524_152752_4.pcd  pcd_file_170524_152752_5.pcd  pcd_file_170524_152752_6.pcd  pcd_file_170524_152752_7.pcd  pcd_file_170524_152753.pcd  pcd_file_170524_152753_1.pcd  pcd_file_180524_150855_1.pcd  pcd_file_180524_150856_1.pcd  pcd_file_180524_150856_3.pcd  pcd_file_180524_150856_5.pcd
clouds/depth_20_water /: pcd_file_170524_152315.pcd  pcd_file_170524_152315_1.pcd  pcd_file_170524_152316.pcd  pcd_file_170524_152316_1.pcd  pcd_file_170524_152316_2.pcd  pcd_file_170524_152316_4.pcd
clouds/depth_30_approx /: pcd_file_170524_152530_5.pcd  pcd_file_170524_152530_6.pcd  pcd_file_170524_152531.pcd  pcd_file_170524_152531_1.pcd
clouds/depth_30_ros /: pcd_file_170524_152736.pcd  pcd_file_170524_152736_1.pcd  pcd_file_170524_152736_2.pcd  pcd_file_170524_152736_3.pcd  pcd_file_170524_152737.pcd  pcd_file_170524_152737_1.pcd  pcd_file_170524_152737_2.pcd  pcd_file_170524_152737_3.pcd  pcd_file_170524_152737_4.pcd  pcd_file_170524_152737_5.pcd  pcd_file_180524_150915_1.pcd  pcd_file_180524_150915_2.pcd  pcd_file_180524_150915_4.pcd  pcd_file_180524_150916.pcd  pcd_file_180524_150916_2.pcd  pcd_file_180524_150916_3.pcd
clouds/depth_30_water /: pcd_file_170524_152333_1.pcd  pcd_file_170524_152333_4.pcd  pcd_file_170524_152333_5.pcd  pcd_file_170524_152333_7.pcd  pcd_file_170524_152333_8.pcd  pcd_file_170524_152334.pcd
clouds/depth_40_approx /: pcd_file_170524_152549.pcd  pcd_file_170524_152550_1.pcd  pcd_file_170524_152550_3.pcd  pcd_file_170524_152550_4.pcd  pcd_file_170524_152550_5.pcd
clouds/depth_40_ros /: pcd_file_170524_152719.pcd  pcd_file_170524_152719_1.pcd  pcd_file_170524_152723.pcd  pcd_file_170524_152724.pcd  pcd_file_170524_152724_1.pcd  (+7 more)
include/: battery.hpp  button.hpp  capture_button.hpp  gpio.hpp  gui.hpp  guiRosLink.hpp  helpers.hpp  industrial_camera.hpp  lights.hpp  real_sense_camera.hpp  realsenseCamera.hpp  temperature_sensor.hpp
launch/: coral_cam_launch.py  coral_cam_launch_up.py  coral_cam_up_launch.py  realsense_camera_launch.py
log/: latest_list
realsense_calibration/: approx_calibration  bad_res_ros_calibration  better_ros_calibration  combined_calibration  ros_calibration  ros_calibration_using_approx
src/: battery.cpp  button.cpp  button.h  button.hpp  capture_button.cpp  coralCam.cpp  coralCam.h  coralCamNode.cpp  coral_cam.cpp  gpio.cpp  gpio.hpp  gui.cpp  gui.h  guiRosLink.cpp  industrialCamera.cpp  industrialCamera.h  industrial_camera.cpp  lights.cpp  lights.h  main.cpp  real_sense_camera.cpp  realsenseCamera.cpp  realsenseCamera.h  realsenseCamera.hpp  temperature_sensor.cpp
(+225 files in other folders)
